{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 731,
  "lineage": "490f1504-98c2-d1e0-aede-0cfd4de4efe4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:security-group/sg-010f099c3ff8858d5",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010f099c3ff8858d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "791718719052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-07f0a9c6d98931490-default-sg"
            },
            "tags_all": {
              "Name": "vpc-07f0a9c6d98931490-default-sg"
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:vpc/vpc-07f0a9c6d98931490",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cb2edf872c8abbc9",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-7f268d05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f0a9c6d98931490",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f06aabfee3e5f704",
            "owner_id": "791718719052",
            "tags": {
              "Name": "viajemos-test-vpc",
              "Namespace": "viajemos",
              "Stage": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084ef4eb42626b867",
            "arn": "arn:aws:ec2:us-east-1:791718719052:elastic-ip/eipalloc-084ef4eb42626b867",
            "association_id": "eipassoc-01c2430a0db7b135e",
            "domain": "vpc",
            "id": "eipalloc-084ef4eb42626b867",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0efa19a1accf5b540",
            "private_dns": "ip-10-0-99-8.ec2.internal",
            "private_ip": "10.0.99.8",
            "public_dns": "ec2-54-237-23-165.compute-1.amazonaws.com",
            "public_ip": "54.237.23.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03304802ad127a72f",
            "arn": "arn:aws:ec2:us-east-1:791718719052:elastic-ip/eipalloc-03304802ad127a72f",
            "association_id": "eipassoc-089972b5e65c93ef6",
            "domain": "vpc",
            "id": "eipalloc-03304802ad127a72f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b01dbd0ea9d25636",
            "private_dns": "ip-10-0-124-224.ec2.internal",
            "private_ip": "10.0.124.224",
            "public_dns": "ec2-44-209-231-244.compute-1.amazonaws.com",
            "public_ip": "44.209.231.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3d3e821405f20c8",
            "arn": "arn:aws:ec2:us-east-1:791718719052:elastic-ip/eipalloc-0e3d3e821405f20c8",
            "association_id": "eipassoc-0da5abe7ed9e6d5a9",
            "domain": "vpc",
            "id": "eipalloc-0e3d3e821405f20c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bf5ff32c452e613e",
            "private_dns": "ip-10-0-139-15.ec2.internal",
            "private_ip": "10.0.139.15",
            "public_dns": "ec2-44-214-13-102.compute-1.amazonaws.com",
            "public_ip": "44.214.13.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084ef4eb42626b867",
            "association_id": "eipassoc-01c2430a0db7b135e",
            "connectivity_type": "public",
            "id": "nat-07f50d760e07dfc51",
            "network_interface_id": "eni-0efa19a1accf5b540",
            "private_ip": "10.0.99.8",
            "public_ip": "54.237.23.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0628c4c6584da7bc1",
            "tags": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03304802ad127a72f",
            "association_id": "eipassoc-089972b5e65c93ef6",
            "connectivity_type": "public",
            "id": "nat-05dac9a69a2d3559c",
            "network_interface_id": "eni-0b01dbd0ea9d25636",
            "private_ip": "10.0.124.224",
            "public_ip": "44.209.231.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edc0533c216eae65",
            "tags": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3d3e821405f20c8",
            "association_id": "eipassoc-0da5abe7ed9e6d5a9",
            "connectivity_type": "public",
            "id": "nat-04acd24b18dad0cf6",
            "network_interface_id": "eni-0bf5ff32c452e613e",
            "private_ip": "10.0.139.15",
            "public_ip": "44.214.13.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a363a0dcc0e759b4",
            "tags": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "viajemos-test-subnet-nat-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:network-acl/acl-0a4c63b3d20a8062c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a4c63b3d20a8062c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "791718719052",
            "subnet_ids": [
              "subnet-01238c8a09a369e54",
              "subnet-04732dd0e257a67c7",
              "subnet-0694a9b948ae68a17"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:network-acl/acl-0f38565991a4b56a8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f38565991a4b56a8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "791718719052",
            "subnet_ids": [
              "subnet-0628c4c6584da7bc1",
              "subnet-0a363a0dcc0e759b4",
              "subnet-0edc0533c216eae65"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1581663295",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a4c63b3d20a8062c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_network_acl.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3991316708",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a4c63b3d20a8062c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_network_acl.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3006233581",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f38565991a4b56a8",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_network_acl.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2245423651",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f38565991a4b56a8",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_network_acl.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00769116a80ab10621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07f50d760e07dfc51",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00769116a80ab1062",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0db119559bed5b3aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05dac9a69a2d3559c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db119559bed5b3aa",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f90bb9597218594f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04acd24b18dad0cf6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f90bb9597218594f",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_eip.default",
            "module.dynamic_subnets.aws_eip_association.nat_instance",
            "module.dynamic_subnets.aws_instance.nat_instance",
            "module.dynamic_subnets.aws_nat_gateway.default",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_security_group.nat_instance",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_ami.nat_instance",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_eip.nat",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c0fddde288ae2572",
            "id": "r-rtb-09251f30b25afc7db1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09251f30b25afc7db",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:route-table/rtb-00769116a80ab1062",
            "id": "rtb-00769116a80ab1062",
            "owner_id": "791718719052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f50d760e07dfc51",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:route-table/rtb-0db119559bed5b3aa",
            "id": "rtb-0db119559bed5b3aa",
            "owner_id": "791718719052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05dac9a69a2d3559c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:route-table/rtb-0f90bb9597218594f",
            "id": "rtb-0f90bb9597218594f",
            "owner_id": "791718719052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04acd24b18dad0cf6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:route-table/rtb-09251f30b25afc7db",
            "id": "rtb-09251f30b25afc7db",
            "owner_id": "791718719052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0fddde288ae2572",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2cca74fa0f46fc1",
            "route_table_id": "rtb-00769116a80ab1062",
            "subnet_id": "subnet-01238c8a09a369e54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07330049fda41ce45",
            "route_table_id": "rtb-0db119559bed5b3aa",
            "subnet_id": "subnet-0694a9b948ae68a17"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08983440a356eff1e",
            "route_table_id": "rtb-0f90bb9597218594f",
            "subnet_id": "subnet-04732dd0e257a67c7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.private",
            "module.dynamic_subnets.aws_subnet.private",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ee0a4df180110cb",
            "route_table_id": "rtb-09251f30b25afc7db",
            "subnet_id": "subnet-0628c4c6584da7bc1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06165ab0bc562d54f",
            "route_table_id": "rtb-09251f30b25afc7db",
            "subnet_id": "subnet-0edc0533c216eae65"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06da25379a7263fa6",
            "route_table_id": "rtb-09251f30b25afc7db",
            "subnet_id": "subnet-0a363a0dcc0e759b4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.aws_route_table.public",
            "module.dynamic_subnets.aws_subnet.public",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:subnet/subnet-01238c8a09a369e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01238c8a09a369e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "791718719052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:subnet/subnet-0694a9b948ae68a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0694a9b948ae68a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "791718719052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:subnet/subnet-04732dd0e257a67c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04732dd0e257a67c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "791718719052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "viajemos-test-subnet-private-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:subnet/subnet-0628c4c6584da7bc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0628c4c6584da7bc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "791718719052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public-use1a",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:subnet/subnet-0edc0533c216eae65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc0533c216eae65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "791718719052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public-use1b",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:subnet/subnet-0a363a0dcc0e759b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a363a0dcc0e759b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "791718719052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "viajemos-test-subnet-public-use1c",
              "Namespace": "viajemos",
              "Stage": "test",
              "kubernetes.io/cluster/viajemos-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dynamic_subnets.data.aws_availability_zones.default",
            "module.dynamic_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:internet-gateway/igw-0c0fddde288ae2572",
            "id": "igw-0c0fddde288ae2572",
            "owner_id": "791718719052",
            "tags": {
              "Name": "viajemos-test-vpc",
              "Namespace": "viajemos",
              "Stage": "test"
            },
            "tags_all": {
              "Name": "viajemos-test-vpc",
              "Namespace": "viajemos",
              "Stage": "test"
            },
            "vpc_id": "vpc-07f0a9c6d98931490"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791718719052:vpc/vpc-07f0a9c6d98931490",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5f067749acb5601",
            "default_route_table_id": "rtb-0f06aabfee3e5f704",
            "default_security_group_id": "sg-010f099c3ff8858d5",
            "dhcp_options_id": "dopt-7f268d05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f0a9c6d98931490",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f06aabfee3e5f704",
            "owner_id": "791718719052",
            "tags": {
              "Name": "viajemos-test-vpc",
              "Namespace": "viajemos",
              "Stage": "test"
            },
            "tags_all": {
              "Name": "viajemos-test-vpc",
              "Namespace": "viajemos",
              "Stage": "test"
            }
          }
        }
      ]
    }
  ]
}